--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    image: "rushikesh-rawool10/node-app-test-new:latest"
+    build: .
     ports:
       - "8000:8000"
