--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    image: "rushidevops10/node-app-new:latest-v2"
+    image: "rushidevops10/node-app-new:latest"
     ports:
       - "8000:8000"
